force-app/main/default/objects/THOR_Form_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eqcc_Step_Id__c</fullName>
        <label>Eqcc Step Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Code__c</fullName>
        <label>Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Json_String__c</fullName>
        <label>Json String</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>THOR Form Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Code__c</columns>
        <columns>Step__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>THOR Form Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>